--- a/ant/windows/windows-uninstaller.nsi.in
+++ b/ant/windows/windows-uninstaller.nsi.in
@@ -38,7 +38,7 @@ CRCCheck On
 Name "Uninstall ${project.name}"
 Caption "Uninstall ${project.name}"
 Icon "${basedir}/ant/windows/nsis/uninstall.ico"
-OutFile "${dist.dir}/uninstall.exe"
+OutFile "${nsis.outfile}"
 
 Var /GLOBAL RESPAWN
 Var /GLOBAL DELETE_DIR
