--- a/ant/project.properties
+++ b/ant/project.properties
@@ -33,9 +33,11 @@ jar.index=true
 
 javac.source=1.7
 javac.target=1.7
-javafx.version=11.0.2
+javafx.version=15.ea
 javafx.mirror=https://gluonhq.com/download
 monocle.mirror=https://s3-eu-west-1.amazonaws.com/software.gluonhq.com/javafx/support/supqz/supqz-3
+# FIXME: Convert this to a real version, parse using ant
+monocle.version=15-ea%2B3
 java.download=https://adoptopenjdk.net/?variant=openjdk11
 
 manifest.application.name=${project.name}
