--- a/ant/windows/windows-installer.nsi.in
+++ b/ant/windows/windows-installer.nsi.in
@@ -11,18 +11,15 @@
 !include FindJava.nsh
 !include StdUtils.nsh
 
-
 Name "${project.name}"
-OutFile "${out.dir}/${project.filename}${build.type}-${build.version}.exe"
+OutFile "${nsis.outfile}"
 RequestExecutionLevel admin
 
 !define MUI_ICON "${basedir}/assets/branding/windows-icon.ico"
 
 ; Branding for qz only
 !if "${project.filename}" == "qz-tray"
-    !define MUI_UNICON "${basedir}/ant/windows/nsis/uninstall.ico"
     !define MUI_WELCOMEFINISHPAGE_BITMAP "${basedir}\ant\windows\nsis\welcome.bmp"
-    !define MUI_UNWELCOMEFINISHPAGE_BITMAP "${basedir}\ant\windows\nsis\welcome.bmp"
 !endif
 
 !insertmacro MUI_PAGE_WELCOME
@@ -80,9 +77,7 @@ Section
     Call FindJava
     !insertmacro VerifyJava "TryAgain"
 
-    ; Create the uninstaller
     SetOutPath $INSTDIR
-    WriteUninstaller "$INSTDIR\uninstall.exe" ; Backslash required
 
     ; Run preinstall tasks
     SetOutPath "$PluginsDir\tmp"
@@ -103,26 +98,6 @@ Section
     ${StdUtils.ExecShellAsUser} $0 "$INSTDIR\${project.filename}.exe" "open" ""
 SectionEnd
 
-Section "Uninstall"
-    DetailPrint "Uninstalling..."
-
-    ; Set the $java variable
-    TryAgain:
-    Call un.FindJava
-    !insertmacro VerifyJava "TryAgain"
-
-    ; Run uninstall tasks
-    SetOutPath $INSTDIR
-    !insertmacro QzInstaller "uninstall" "" ""
-
-    ; Remove all files
-    DetailPrint "Removing all files..."
-    SetDetailsPrint none ; Temporarily suppress details
-    SetOutPath $TEMP
-    RMDir /r "$INSTDIR"
-    SetDetailsPrint both
-SectionEnd
-
 !macro Init
     ${If} ${RunningX64}
         SetRegView 64
@@ -139,10 +114,5 @@ SectionEnd
 
 ; Runs for installs
 Function .onInit
-    !insertmacro Init
-FunctionEnd
-
-; Runs for uninstall
-Function un.onInit
     !insertmacro Init
 FunctionEnd
