Add Monocle FX support for Java 11+ (#586)
Add Monocle FX support for Java 11+
- Uses JavaFX15-ea with bundled Monocle support
- Closes #576

Co-authored-by: Berenz <thebrettberenz@gmail.com>

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -33,8 +33,8 @@ jar.index=true
 
 javac.source=1.7
 javac.target=1.7
-javafx.version=11.0.2
-javafx.mirror=https://gluonhq.com/download
+javafx.version=15.ea+0_monocle
+javafx.mirror=https://download2.gluonhq.com/openjfx/15
 java.download=https://adoptopenjdk.net/?variant=openjdk11
 
 manifest.application.name=${project.name}
