--- a/ant/windows/windows-installer.nsi.in
+++ b/ant/windows/windows-installer.nsi.in
@@ -33,10 +33,10 @@ RequestExecutionLevel admin
     SetDetailsPrint textonly
     DetailPrint "Running ${step}..."
     SetDetailsPrint listonly
-    DetailPrint 'Running ${step}: $java ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"'
+    DetailPrint 'Running ${step}: "$java" ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"'
     SetDetailsPrint both
     ClearErrors
-    nsExec::ExecToLog '$java ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"'
+    nsExec::ExecToLog '"$java" ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"'
     Pop $0
     ${If} "$0" != "0"
         Abort "Installation failed during ${step} step.  Please check log for details."
