--- a/ant/project.properties
+++ b/ant/project.properties
@@ -22,6 +22,6 @@ jar.index=true
 # See also qz.common.Constants.java
 javac.source=1.8
 javac.target=1.8
-javafx.version=11.0.2
-javafx.mirror=https://gluonhq.com/download
+javafx.version=15.ea+3_monocle
+javafx.mirror=https://download2.gluonhq.com/openjfx/15
 java.download=https://adoptopenjdk.net/?variant=openjdk11
