--- a/ant/unix/unix-launcher.sh.in
+++ b/ant/unix/unix-launcher.sh.in
@@ -22,6 +22,7 @@ RED="\\x1B[1;31m";GREEN="\\x1B[1;32m";YELLOW="\\x1B[1;33m";PLAIN="\\x1B[0m"
 SUCCESS="   [${GREEN}success${PLAIN}]"
 FAILURE="   [${RED}failure${PLAIN}]"
 WARNING="   [${YELLOW}warning${PLAIN}]"
+OBSERVE="   [${YELLOW}note${PLAIN}]"
 
 echo "Looking for Java..."
 
@@ -36,6 +37,12 @@ if [ -d ./jre ]; then
     echo -e "$SUCCESS A bundled runtime was found.  Using..."
     PATH="$(pwd)/jre/bin:$PATH"
     export PATH
+fi
+
+# Check for user overridable launch options
+if [ -z "$${launch.overrides}" ]; then
+  echo -e "$OBSERVE Picked up additional launch options: $${launch.overrides}"
+  LAUNCH_OPTS="$LAUNCH_OPTS $${launch.overrides}"
 fi
 
 if [[ "$OSTYPE" == "darwin"* ]]; then
