Rename to QZ_OPTS

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -8,7 +8,7 @@ project.filename=qz-tray
 project.datadir=qz
 
 launch.opts=-Xms512m -Djna.nosys=true
-launch.overrides=QZ_JAVA_OPTS
+launch.overrides=QZ_OPTS
 
 src.dir=${basedir}/src
 out.dir=${basedir}/out
