--- a/ant/project.properties
+++ b/ant/project.properties
@@ -26,3 +26,6 @@ javac.target=1.8
 javafx.version=15.ea+3_monocle
 javafx.mirror=https://download2.gluonhq.com/openjfx/15
 java.download=https://adoptopenjdk.net/?variant=openjdk11
+
+# Workaround to delay expansion of $${foo} (e.g. shell scripts)
+dollar=$
