Add "defaults read" support for macOS

--- a/ant/unix/unix-launcher.sh.in
+++ b/ant/unix/unix-launcher.sh.in
@@ -46,9 +46,14 @@ if [ -n "${dollar}${launch.overrides}" ]; then
 fi
 
 if [[ "$OSTYPE" == "darwin"* ]]; then
+    DEFAULTS_READ=$(defaults read ${apple.bundleid} ${launch.overrides} 2>/dev/null) || true
+    if [ -n "$DEFAULTS_READ" ]; then
+          echo -e "$OBSERVE Picked up additional launch options: $DEFAULTS_READ"
+          LAUNCH_OPTS="$LAUNCH_OPTS $DEFAULTS_READ"
+    fi
     ICON_PATH="$DIR/Contents/Resources/apple-icon.icns"
     MAC_PRIMARY="/usr/libexec/java_home"
-    MAC_FALLACK="/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home/bin"
+    MAC_FALLBACK="/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home/bin"
     echo "Trying $MAC_PRIMARY..."
     if "$MAC_PRIMARY" -v $JAVA_MIN+ &>/dev/null; then
         echo -e "$SUCCESS Using \"$MAC_PRIMARY -v $JAVA_MIN+ --exec\" to launch $ABOUT_TITLE"
@@ -57,9 +62,9 @@ if [[ "$OSTYPE" == "darwin"* ]]; then
         }
     elif [ -d "/Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home/bin" ]; then
         echo -e "$WARNING No luck using $MAC_PRIMARY"
-        echo "Trying $MAC_FALLACK..."
+        echo "Trying $MAC_FALLBACK..."
         java() {
-            "$MAC_FALLACK/java" "$@"
+            "$MAC_FALLBACK/java" "$@"
         }
     fi
 else
