--- a/ant/unix/unix-launcher.sh.in
+++ b/ant/unix/unix-launcher.sh.in
@@ -22,7 +22,7 @@ RED="\\x1B[1;31m";GREEN="\\x1B[1;32m";YELLOW="\\x1B[1;33m";PLAIN="\\x1B[0m"
 SUCCESS="   [${GREEN}success${PLAIN}]"
 FAILURE="   [${RED}failure${PLAIN}]"
 WARNING="   [${YELLOW}warning${PLAIN}]"
-OBSERVE="   [${YELLOW}note${PLAIN}]"
+MESSAGE="   [${YELLOW}message${PLAIN}]"
 
 echo "Looking for Java..."
 
@@ -41,14 +41,14 @@ fi
 
 # Check for user overridable launch options
 if [ -n "${dollar}${launch.overrides}" ]; then
-  echo -e "$OBSERVE Picked up additional launch options: ${dollar}${launch.overrides}"
+  echo -e "$MESSAGE Picked up additional launch options: ${dollar}${launch.overrides}"
   LAUNCH_OPTS="$LAUNCH_OPTS ${dollar}${launch.overrides}"
 fi
 
 if [[ "$OSTYPE" == "darwin"* ]]; then
     DEFAULTS_READ=$(defaults read ${apple.bundleid} ${launch.overrides} 2>/dev/null) || true
     if [ -n "$DEFAULTS_READ" ]; then
-          echo -e "$OBSERVE Picked up additional launch options: $DEFAULTS_READ"
+          echo -e "$MESSAGE Picked up additional launch options: $DEFAULTS_READ"
           LAUNCH_OPTS="$LAUNCH_OPTS $DEFAULTS_READ"
     fi
     ICON_PATH="$DIR/Contents/Resources/apple-icon.icns"
