--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,26 @@
 matrix:
   include:
-    - jdk: oraclejdk8
+    - os: linux
+      jdk: oraclejdk8
       env: TARGET=nsis
-    - jdk: oraclejdk8
+    - os: linux
+      jdk: oraclejdk8
+      env: TARGET=makeself
+    - os: linux
+      jdk: openjdk11
+      env: TARGET=nsis
+    - os: linux
+      jdk: openjdk11
       env: TARGET=makeself
     - os: osx
+      jdk: openjdk11
       env: TARGET=pkgbuild
-    - jdk: oraclejdk11
-      env: TARGET=nsis
-    - jdk: oraclejdk11
-      env: TARGET=makeself
+      osx_image: xcode12.2
     - os: osx
-      jdk: oraclejdk11
+      jdk: openjdk11
       env: TARGET=pkgbuild
+      osx_image: xcode12.2
+
 language: java
 dist: trusty
 before_script:
