--- a/ant/windows/windows-installer.nsi.in
+++ b/ant/windows/windows-installer.nsi.in
@@ -36,7 +36,7 @@ RequestExecutionLevel admin
     DetailPrint 'Running ${step}: "$java" ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"'
     SetDetailsPrint both
     ClearErrors
-    nsExec::ExecToLog '"$java" ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"'
+    ExecDos::exec /NOUNLOAD /DISABLEFSR '"$java" ${launch.opts} -jar "$OUTDIR\${project.filename}.jar" "${step}" "${option}" "${value}"' "" "$EXEDIR/${project.filename}_${step}.log"
     Pop $0
     ${If} "$0" != "0"
         Abort "Installation failed during ${step} step.  Please check log for details."
@@ -45,7 +45,7 @@ RequestExecutionLevel admin
 
 !macro VerifyJava jumpto
     ; Test java executable
-    nsExec::ExecToLog '"$java" -version"'
+    ExecDos::exec /NOUNLOAD /DISABLEFSR '"$java" -version"' "" "$EXEDIR/${project.filename}_java.log"
     Pop $0
     ${If} "$0" == "0"
         Goto Resume
