Separate installer options from launch options

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -7,7 +7,8 @@ project.name=QZ Tray
 project.filename=qz-tray
 project.datadir=qz
 
-launch.opts=-Xms512m -Djna.nosys=true
+install.opts=-Djna.nosys=true
+launch.opts=-Xms512m ${install.opts}
 launch.overrides=QZ_OPTS
 
 src.dir=${basedir}/src
