--- a/ant/project.properties
+++ b/ant/project.properties
@@ -24,9 +24,12 @@ jar.index=true
 # See also qz.common.Constants.java
 javac.source=1.8
 javac.target=1.8
-javafx.version=15.ea+3_monocle
-javafx.mirror=https://download2.gluonhq.com/openjfx/15
+javafx.version=17-ea+6
+javafx.arch=aarch64
+javafx.mirror=https://download2.gluonhq.com/openjfx/17
 java.download=https://adoptopenjdk.net/?variant=openjdk11
+
+
 
 # Workaround to delay expansion of $${foo} (e.g. shell scripts)
 dollar=$
