--- a/ant/project.properties
+++ b/ant/project.properties
@@ -24,9 +24,21 @@ jar.index=true
 # See also qz.common.Constants.java
 javac.source=1.8
 javac.target=1.8
-javafx.version=15.ea+3_monocle
-javafx.mirror=https://download2.gluonhq.com/openjfx/15
 java.download=https://adoptopenjdk.net/?variant=openjdk11
+
+jre.arch=${os.arch}
+
+# JavaFX x86_64
+javafx.x86_64.version=15.ea+3_monocle
+javafx.x86_64.mirror=https://download2.gluonhq.com/openjfx/15
+javafx.x86_64.arch=x64
+javafx.x86_64.separator=-
+
+# JavaFX ARM64
+javafx.aarch64.version=17-ea+6
+javafx.aarch64.mirror=https://download2.gluonhq.com/openjfx/17
+javafx.aarch64.arch=aarch64
+javafx.aarch64.separator=_
 
 # Workaround to delay expansion of $${foo} (e.g. shell scripts)
 dollar=$
