jlink branch, rebased (#4)
* Adds JLink helper class, CLI support
* Refactor main(); untangles TrayManager and PrintSocketServer
* Force openjdk@11 on Travis + macOS
* Mimic javapackager structure for macOS
* Temporarily disable clean between builds
* Temporarily allow running Mac version from out

Co-authored-by: Berenz <thebrettberenz@gmail.com>
Co-authored-by: Vzor- <kyle@berezin.com>

--- a/ant/windows/windows-launcher.nsi.in
+++ b/ant/windows/windows-launcher.nsi.in
@@ -39,6 +39,7 @@ Section
     ${GetParameters} $params
 
     ; Sets the $java variable
+    Push "$EXEDIR"
     Call FindJava
 
     Var /GLOBAL opts
