Initial jlink support for aarch64 cross, multiple jdk providers

--- a/build.xml
+++ b/build.xml
@@ -159,6 +159,8 @@
             <arg value="jlink"/>
             <arg value="--platform"/>
             <arg value="${target.platform}"/>
+            <arg value="--arch"/>
+            <arg value="${jre.arch}"/>
         </java>
     </target>
 
