--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,28 @@ matrix:
     - os: linux
       jdk: oraclejdk8
       env: TARGET=nsis
+      arch: amd64
     - os: linux
       jdk: openjdk11
       env: TARGET=nsis
+      arch: amd64
     - os: linux
       jdk: oraclejdk8
       env: TARGET=makeself
+      arch: amd64
     - os: linux
       jdk: openjdk11
       env: TARGET=makeself
+      arch: amd64
+    - os: linux
+      jdk: openjdk11
+      env: TARGET=makeself
+      arch: arm64
     - os: osx
       env: TARGET=pkgbuild
       jdk: openjdk11
       osx_image: xcode12.2
+      arch: amd64
 language: java
 dist: trusty
 before_script:
