Cleanup Root dir, moved to .app/Contents

--- a/ant/unix/unix-launcher.sh.in
+++ b/ant/unix/unix-launcher.sh.in
@@ -34,7 +34,7 @@ fi
 
 # Always prefer relative jre/jdk
 if [[ "$DIR" == *"/Contents/MacOS"* ]]; then
-    PATH="$DIR/../../PlugIns/Java.runtime/Contents/Home/bin:$PATH"
+    PATH="$DIR/../PlugIns/Java.runtime/Contents/Home/bin:$PATH"
 else
     PATH="$DIR/jre/bin:$DIR/jdk/bin:$PATH"
 fi
@@ -105,7 +105,7 @@ if command -v java &>/dev/null; then
         if [ -f "$PROPS_FILE.jar" ]; then
             prefix="" # aside launcher, e.g. preinstall
         else
-            prefix="../../" # back two directories, e.g. postinstall
+            prefix="../" # back two directories, e.g. postinstall
         fi
         java $LAUNCH_OPTS -Xdock:name="$ABOUT_TITLE" -Xdock:icon="$DIR/Contents/Resources/apple-icon.icns" -jar -Dapple.awt.UIElement="true" -Dapple.awt.enableTemplateImages="true" "${prefix}$PROPS_FILE.jar" -NSRequiresAquaSystemAppearance False "$@"
     else
