--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
     <import file="ant/linux/installer.xml"/>
     <import file="ant/windows/installer.xml"/>
 
-    <target name="distribute" depends="init,download-javafx,build-jar,override-authcert,include-assets,whitelist-certs">
+    <target name="distribute" depends="init,quick-clean,download-javafx,build-jar,override-authcert,include-assets,whitelist-certs">
         <antcall target="tidy-javafx-dist"/>
         <echo level="info">Process complete</echo>
     </target>
@@ -37,7 +37,21 @@
     </target>
 
     <target name="clean" depends="init">
-        <!-- <delete dir="${out.dir}"/> -->
+        <delete dir="${out.dir}"/>
+    </target>
+
+    <target name="quick-clean">
+        <!-- Cleanup lingering files (for other OS installers) -->
+        <delete dir="${dist.dir}/Contents/" failonerror="false"/>
+        <delete file="${dist.dir}/${project.filename}.svg" failonerror="false"/>
+        <delete dir="${dist.dir}/lib/" failonerror="false"/>
+        <delete dir="${dist.dir}/jre/" failonerror="false"/>
+        <delete includeemptydirs="true" failonerror="false">
+            <fileset dir="${out.dir}">
+                <include name="**/*"/>
+                <exclude name="**/jlink/**"/>
+            </fileset>
+        </delete>
     </target>
 
     <target name="compile-socket" depends="init">
