--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,11 @@ matrix:
       jdk: openjdk11
       osx_image: xcode12.2
       arch: amd64
+    - os: osx
+      env: TARGET="-Djre.arch=aarch64 pkgbuild"
+      jdk: openjdk11
+      osx_image: xcode12.3
+      arch: amd64
 language: java
 dist: trusty
 addons:
