--- a/ant/project.properties
+++ b/ant/project.properties
@@ -32,13 +32,11 @@ jre.arch=${os.arch}
 javafx.x86_64.version=15.ea+3_monocle
 javafx.x86_64.mirror=https://download2.gluonhq.com/openjfx/15
 javafx.x86_64.arch=x64
-javafx.x86_64.separator=-
 
 # JavaFX ARM64
-javafx.aarch64.version=17-ea+8
+javafx.aarch64.version=17-ea+9_monocle
 javafx.aarch64.mirror=https://download2.gluonhq.com/openjfx/17
 javafx.aarch64.arch=aarch64
-javafx.aarch64.separator=_
 
 # Workaround to delay expansion of $${foo} (e.g. shell scripts)
 dollar=$
