Add mask tray toggle for JDK17+ Closes #817

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -38,5 +38,8 @@ javafx.aarch64.version=17-ea+9_monocle
 javafx.aarch64.mirror=https://download2.gluonhq.com/openjfx/17
 javafx.aarch64.arch=aarch64
 
+# Mask tray toggle (Apple only)
+java.mask.tray=true
+
 # Workaround to delay expansion of $${foo} (e.g. shell scripts)
 dollar=$
