Add jigsaw "--add-opens" options for Java 9+

--- a/ant/project.properties
+++ b/ant/project.properties
@@ -9,6 +9,7 @@ project.datadir=qz
 
 install.opts=-Djna.nosys=true
 launch.opts=-Xms512m ${install.opts}
+launch.jigsaw=--add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED
 launch.overrides=QZ_OPTS
 
 src.dir=${basedir}/src
