--- a/ant/project.properties
+++ b/ant/project.properties
@@ -9,7 +9,9 @@ project.datadir=qz
 
 install.opts=-Djna.nosys=true
 launch.opts=-Xms512m ${install.opts}
-launch.jigsaw=--add-opens java.desktop/sun.lwawt.macosx=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED
+# jdk9+ flags
+# - Dark theme requires workaround https://github.com/bobbylight/Darcula/issues/8
+launch.jigsaw=--add-exports java.desktop/sun.swing=ALL-UNNAMED
 launch.overrides=QZ_OPTS
 
 src.dir=${basedir}/src
