Added Sandboxing and DMG build support Issues -Some comments were lost in the shuffle -Properties is broken in sandbox (among other things) -Upgrade is currently broken, as well as removeLegacyFiles -Other things are broken too (such as JFX last time I checked)

--- a/ant/apple/apple-preinstall.sh.in
+++ b/ant/apple/apple-preinstall.sh.in
@@ -5,7 +5,7 @@ set -e
 
 # Get working directory
 DIR=$(cd "$(dirname "$0")" && pwd)
-pushd "$DIR/payload/Contents/MacOS/"
+pushd "$DIR/payload/${project.name}.app/Contents/MacOS/"
 
 # Offer to download Java if missing
 if ! ./"${project.name}" --version; then
