--- a/ant/apple/apple-postinstall.sh.in
+++ b/ant/apple/apple-postinstall.sh.in
@@ -5,7 +5,7 @@ set -e
 
 # Get working directory
 DIR=$(cd "$(dirname "$0")" && pwd)
-pushd "$DIR/payload/Contents/MacOS/"
+pushd "$DIR/payload/${project.name}.app/Contents/MacOS/"
 
 ./"${project.name}" install
 popd
