--- a/ant/apple/appdmg.json.in
+++ b/ant/apple/appdmg.json.in
@@ -3,6 +3,9 @@
   "background": "${basedir}/ant/apple/dmg-background.png",
   "contents": [
     { "x": 407, "y": 244, "type": "link", "path": "/Applications" },
-    { "x": 133, "y": 244, "type": "file", "path": "${dist.dir}/${project.name}.app" }
-  ]
+    { "x": 133, "y": 244, "type": "file", "path": "${build.dir}/${project.name}.app" }
+  ],
+  "code-sign": {
+    "signing-identity" : "${apple.packager.signid}"
+  }
 }
