--- a/ant/project.properties
+++ b/ant/project.properties
@@ -22,13 +22,15 @@ sign.lib.dir=${out.dir}/jar-signed
 jar.compress=true
 jar.index=true
 
+build.external-libs = true
+
 # See also qz.common.Constants.java
 javac.source=1.8
 javac.target=1.8
 java.download=https://adoptopenjdk.net/?variant=openjdk11
 
 # Default to Java's architecture
-jre.arch=${os.arch}
+target.arch=${os.arch}
 
 # Skip bundling the java runtime
 # jre.skip=true
