--- a/ant/project.properties
+++ b/ant/project.properties
@@ -24,7 +24,8 @@ sign.lib.dir=${out.dir}/jar-signed
 jar.compress=true
 jar.index=true
 
-build.external-libs = true
+# Separate native lib resources from jars
+separate.static.libs=true
 
 # See also qz.common.Constants.java
 javac.source=1.8
